# retail-banking-app

./: .env  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_DEPLOY.md  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  PLAN_APP_IMPROVEMENTS.md  PLAN_DYNAMIC_DATA_BACKEND.md  PLAN_RESEND_API_KEYS.md  README.md  _typos.toml  biome.json  deploy_prod.sh  docker-compose.yml  justfile  nginx.conf  package.json  pnpm-lock.yaml  requests.http  rerun_migrations.sh  reset_db.sh
backend/: .env  Cargo.toml  clippy.toml
backend/.cargo/: audit.toml  config.toml
backend/.sqlx/: query-05379b9f851299c9a16085bd3665f8113277813944c3e4eaab0053c7b85981cc.json  query-0de2ffc874cabbf4dd320b5845ef0ec49c209edd74944d72eaf7a3add1da89fe.json  query-0e6b47ed7d8644793a71ff4663850b8c8875df6243dcf9c4c993365a2f4ad47a.json  query-10a0b948f31aaa27c5093f31a2ed3f2b910b65db9b6d6c609a532f3384bdc863.json  query-11b722d36aac9c33337abebbbaa84880c14608df3841dbaf592b8cd3bb4c37c5.json  query-124babd85d81b5a4adb9842ed2fc39e78a50dc74a821552e2eb25bf2941bc695.json  query-13135e7bf0eb9cd5d18f92532582b450ccc6f7f1f834a6a0fa29f9faa0ba227c.json  query-1771ec4179daa864946037b0ba985f690cc3d15af7152be5a15243fc6204faa6.json  query-1a4b0b8e7e93e21fe717e39e60902991a42c5644f30ee73342dd04946d2cb67b.json  query-20b7c5df777eda4621ced10ab7a53c3ce391a2cce7d18a6eba13cb17d95d4024.json  query-271f3439b58dfdd82bf7bb4e7cf2a724c6c7e7e85326661de3e90a0997c2ecaa.json  query-27d269032c8d642ef6a4bb2576fa916f7d9cb9c2c96de0a80e04a2b0a25610f0.json  query-27e91800a9e448b34fc5c10c83b76e1c28800e3137a8bc5c08369ec9cc64c511.json  query-28e068013f5fe9b73964c4be09b206c6626714e5a25615ea325f224b8078ebb3.json  query-2bb5d15975620c171513d0e7ef322d4fb5dd948d068d5e33eaf20dc92eb5e88b.json  query-30bb047628e2ca3f5ede41869eeb06d1585403cc643043ab86700f2938ed7306.json  query-314e7dc905f9e2ce0a80d86377333c24e910cd48d16730ea8d74e7bdd07488c6.json  query-36c9931f908a16944a0326d8ad22c466e91e990fdcd3acfc547d77e24a546c33.json  query-39528f0d9e79beed96862f8c0a510b8d4d6c988248de6ce0f8d92e8b4be6b81f.json  query-44ae7be163e5b6441bd8fbd8c2ba70728bc6d10d611c2e335227edf099102c25.json  query-46f80b41111f8c1a3397a2ee5290da088df0f733af4de2e8a7c3588903728650.json  query-489cb6378d5c003934ecac1b9d7459dafe4908d9e4192c74c28f947c595a3877.json  query-497d807d991bfacf439675829b787c9ed5dd5211c37cc7ffa66987a08e563188.json  query-662a8d1652b52113914b2dc3e63a10c44cc415067f8b0da0093574fa0fd2e397.json  query-766a60c566204c9fa08cd51b8d5e84ce10837385e8b20c9f649ebd54cbebbfb9.json  query-7b5d402dc22362b767936b9484911df90dfc6e88c03c3363ebe4e3e783925248.json  query-7bf8134e415ae737a73d99c1e2fc6567fa2d5be6c3209acdbc54b46cc8aedf97.json  query-7e6c8468e6a39a92cd4dade9320e7e948e2f3d52118fcc7f8b4e62c4fba3b0b5.json  query-7e924afb87fed0c0067da1f1ff6074da2edd69b76922ccfb9a5b2e9d87bcb616.json  query-7faf63215f41a63f1f0acd0f6256da63a1e5ae8490552a1997bd01553e0a1f38.json  query-812d37f5c811e0e71f452951913262defabc608649a6ec3884a321d95656f9a3.json  query-834d8be379b337d9400067ace03a30c1750f965e6c3313614df06dcfdb0f0a5b.json  query-84af115ff288cf3dc33cabc5bf7a7468b924c06494515cc981256848a368f5f0.json  query-854790a390ad5cb6fb2d94cf94c6f55b10dd4635f17014dd5e7a48d5c3c2d86e.json  query-8693fe3585cbf854ffb9fbfd6468466dfe20623d7a9889bf55660746ecbf0871.json  query-86ab7418cf0e92f0a2c40c9162493630e42ed49f6547e598931b0a6bf0f15142.json  query-88a30020928265b58e44d4b1c54743834cf47b32ad487afea11fe8f72a3f732e.json  (+28 more)
backend/bindings/: AccountType.ts  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.ios.conf.json
(+253 files in other folders)
