[workspace]

[package]
name = "auth-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[lib]
name = "auth_backend"
path = "src/lib.rs"

[dependencies]
anyhow     = "1"
axum       = { version = "0.8", features = ["macros"] }
dotenv     = "0.15"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx       = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "migrate", "json", "uuid", "rust_decimal"] }
rust_decimal = { version = "1", features = ["serde-float"] }
uuid       = { version = "1", features = ["v4", "serde"] }
tokio      = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono     = { version = "0.4", features = ["serde"] }
ts-rs      = { version = "10", features = ["chrono-impl", "serde-compat", "uuid-impl"] }
strum      = { version = "0.27", features = ["derive"] }
pwhash       = "0.3"
jsonwebtoken = "9"
axum-extra   = { version = "0.10", features = ["cookie"] }
time         = "0.3"
typst        = "0.13"
typst-pdf    = "0.13"
typst-assets = { version = "0.13", features = ["fonts"] }
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64       = "0.22"
validator    = { version = "0.18", features = ["derive"] }

[lints.clippy]
disallowed_macros  = "deny"
disallowed_methods = "deny"

[dev-dependencies]
tower            = { version = "0.5", features = ["util"] }
serial_test      = "3"
http-body-util   = "0.1"
