[package]
name = "retail-banking-tauri"
version = "0.1.0"
edition = "2021"
description = "Desktop/mobile wrapper for the retail banking app"

[lib]
name = "retail_banking_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
